fixed height+weight on lines 48-50, updated stand

--- a/static/index.html
+++ b/static/index.html
@@ -45,9 +45,9 @@
             <h1 style = "color: orangered" id="rps-bot-score">Bot Score: 0</h1>
         </div>
         <div class = "flex-box-container-3" id = "flex-box-rps-div">
-            <img id = "rock" src="../images/RPS/Rock.jpg" height=150 width=150 alt="" onclick="rpsGame(this)">
-            <img id = "paper" src="../images/RPS/Paper.jpg" height=150 width=150 alt="" onclick="rpsGame(this)">
-            <img id = "scissor" src="../images/RPS/Scissor.jpg" height=150 width=150 alt="" onclick="rpsGame(this)">
+            <img id = "rock" src="../images/RPS/Rock.jpg" height="150" width="150" alt="" onclick="rpsGame(this)">
+            <img id = "paper" src="../images/RPS/Paper.jpg" height="150" width="150" alt="" onclick="rpsGame(this)">
+            <img id = "scissor" src="../images/RPS/Scissor.jpg" height="150" width="150" alt="" onclick="rpsGame(this)">
         </div>
     </div>
     <div class = "container-4">
